Switch to simplified input mapping where possible. (#815)
* Switch to simplified input mapping where possible.

* Refine json secret replacing.

* Fix validation tests.

* Merge

* Re-add custom headers.

* Refactored and integrated connector test.

* Format code

* Refined Google connectors

* Refine validation provider handling

* Remove import

* Code cleanup